[package]
name = "system-gauges"
version = "0.1.0"
edition = "2024"
description = "A tui program that displays information about your system in a gauge format"
homepage = "https://github.com/Djalcoding/system-gauges.rs"
repository = "https://github.com/Djalcoding/system-gauges.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
sysinfo = "0.36.1"
termion = "4.0.5"
tui = { version = "0.19", default-features = false, features = ['termion'] }
